--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WeatherApp</string>
-    <string name="api_key">xxxx</string>
+    <string name="api_key">xxxxx</string>
 
     <string name="good">Good</string>
     <string name="fair">Fair</string>
